--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <title>КиноВзор</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="static/styles/style.css" />
+  <!-- ИСПРАВЛЕНО: используем абсолютный путь /static/ -->
+  <link rel="stylesheet" href="/static/styles/style.css">
 </head>
 <body class="theme-dark">
   <div id="app">
@@ -256,7 +257,7 @@
     </div>
   </div>
 
-  <script src="static/js/script.js" defer></script>
+  <script src="/static/js/script.js"></script
 </body>
 </html>
 
